test/compare/testdata/scripts/no-statement.sgo
// errorcheck

:  // ERROR `unexpected :, expected statement`
